<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorButtonNormal">

    <android.support.constraint.Guideline
        android:id="@+id/guidelineMain"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="80dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="80dp"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iconMain"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/key_icon_content_description"
        app:layout_constraintBottom_toTopOf="@+id/guidelineMain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/key" />

    <TextView
        android:id="@+id/textViewKeyName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/key_name"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iconMain"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonGo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:stateListAnimator="@null"
        android:text="@string/key_go"
        app:layout_constraintBottom_toTopOf="@+id/guidelineMain"
        app:layout_constraintEnd_toStartOf="@+id/buttonOtherActions"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/iconMain"
        app:layout_constraintTop_toBottomOf="@+id/textViewKeyName"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonOtherActions"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:stateListAnimator="@null"
        android:text="@string/key_other_options"
        app:layout_constraintBottom_toTopOf="@+id/guidelineMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonGo"
        app:layout_constraintTop_toBottomOf="@+id/textViewKeyName"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>